# fix-csv

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt
build-dbg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  imgui.ini  test-fix-csv[1]_include.cmake  test-fix-csv[1]_tests.cmake
build-rls/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fix-csv  test-fix-csv  test-fix-csv[1]_include.cmake  test-fix-csv[1]_tests.cmake
build-rls-qt/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fix-csv  test-fix-csv  test-fix-csv[1]_include.cmake  test-fix-csv[1]_tests.cmake
build-rls-qt/.qt/: QtDeploySupport.cmake
build-rls-qt/fix-csv_autogen/: moc_predefs.h
build-rls-qt/fix-csv_autogen/6YEA5652QU/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-rls-qt/fix-csv_autogen/include/: ui_mainwindow.h
build-rls-qt/test-fix-csv_autogen/: moc_predefs.h
include/: baseui.h  csvmanager.h  csvstatistics.h  customftxui.h  helperui.h  logsinkui.h  mainwindow.h  opengl_glfw_ui.h  qtextlogsink.h  uimanager.h  uixevent.h  uixscreen.h  win32_dx11_ui.h
src/: csvmanager.cpp  csvstatistics.cpp  customftxui.cpp  helperui.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  opengl_glfw_ui.cpp  uimanager.cpp  uixevent.cpp  uixscreen.cpp  win32_dx11_ui.cpp
tests/: test_csvmanager.cpp  test_csvstatistics.cpp
tests/resources/: file_test_1.csv  file_test_1.csv.out  file_test_2.csv  file_test_3.csv  file_test_4.csv
